--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ nav {
 
 .nav-toggle-label {
     font-size: 2rem;
-    
+
 }
 
 /* Main content */
@@ -89,6 +89,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
